tests/errors/syntax_err05.v
module a;
input x[2:0];
endmodule

